# nonlinear_schrodinger

./: Cargo.toml  LICENSE  Makefile  Readme.md
.github/workflows/: ossar.yml  rust-clippy.yml
src/: complex.rs  ft_cpu.rs  lib.rs  plotters.rs  prelude.rs  solver.rs
src/complex/: complex_impl.rs  real_number.rs  tests.rs
src/examples/: 1d_gaussian_neg_g.rs  1d_harmonic_gaussian.rs  1d_harmonic_imag.rs  2d_harmonic_gaussian.rs  2d_harmonic_two_gaussians.rs
src/ft_cpu/: fft_error.rs  implementation.rs  plan.rs  tests.rs
